2003-04-23  Brian Warner  <warner@lothar.com>

	* doc/howto/telnet.html: Update example from twisted-0.15.5(!) to
	1.0.4

	* twisted/protocols/loopback.py: use reactor.iterate(0.01) so the
	tests hammer the CPU slightly less

	* twisted/test/test_trial.py (LoopbackTests.testError): .type is a
	string
	* twisted/trial/remote.py (JellyReporter.reportResults): stringify
	.type and .value from Failures before jellying them.

	* twisted/internet/base.py (ReactorBase.suggestThreadPoolSize):
	don't let suggestThreadPoolSize(0) be the only reason threads are
	initialized.

	* twisted/python/log.py (err): always log Failures to the logfile. If
	we're doing _keepErrors, then also add them to _keptErrors.

	* twisted/trial/unittest.py (TestSuite.runOneTest): only do
	reportResults once per test. Handle reactor.threadpool being None.

2003-04-22  Bob Ippolito <bob@redivi.com>

	* twisted/python/compat.py: Complete iter implementation with
	__getitem__ hack for 2.1.  dict now supports the full 2.3 featureset.

	* twisted/test/test_compat.py: Tests for compat module, so we know if
	it works or not now ;)
	
2003-04-22  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/lore/latex.py: Handle cross-references and labels slightly
	better, so that e.g. man/lore.html and howto/lore.html don't generate
	conflicting labels.  Also, emit \loreref{...} instead of \pageref{...}
	-- this isn't a standard LaTeX command, see admin/book.tex for an
	example definition.  In HTML generation, all relative hrefs in <a>
	tags are now munged from .html to .xhtml, unless class="absolute".

2003-04-21  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/interfaces.py: Added getServiceNamed, addService,
	and removeService to IServiceCollection.

2003-04-21  Brian Warner  <warner@lothar.com>

	* twisted/web/woven/*.py: add test-case-name tags

2003-04-21  Bob Ippolito <bob@redivi.com>

	* twisted/web/static.py (File, DirectoryListing): DirectoryListing