@@ -1,3 +1,8 @@
+2003-04-26  Dave Peticolas  <dave@krondo.com>
+
+	* twisted/enterprise/adbapi.py: commit successful _runQuery calls
+	instead of rolling back
+
 2003-04-23  Brian Warner  <warner@lothar.com>
 
 	* doc/howto/telnet.html: Update example from twisted-0.15.5(!) to
